bug #148981 (r=kaie, sr=darin). STATE_TRANSFERRING notifications are not fired if theunderlying channel does not provide nsIProgressEventSink notifications...